--- a/00-fundamentals.ipynb
+++ b/00-fundamentals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "647ac211",
+   "id": "3323128c",
    "metadata": {},
    "source": [
     "## 00. PyTorch Fundamentals"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f8807eda",
+   "id": "7c892e20",
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cd18421",
+   "id": "89ae62ef",
    "metadata": {},
    "source": [
     "## Introduction to Tensors\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "32ebc23b",
+   "id": "1f3b4657",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "36495195",
+   "id": "79532b6a",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "46de7c8a",
+   "id": "4e04cb6c",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "33bcb3b5",
+   "id": "4269f705",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "49d9cbf9",
+   "id": "70d4ecca",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "982e4aec",
+   "id": "ecf71383",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "341092fb",
+   "id": "c3e25aa4",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "cb8a9724",
+   "id": "ebd7ba56",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "7554f470",
+   "id": "f8986cd6",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "04bac3f4",
+   "id": "790e6152",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "e692e110",
+   "id": "93382ddc",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "804d5bb5",
+   "id": "915899fa",
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "83ab8dcd",
+   "id": "313f245d",
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "95517041",
+   "id": "d3b7fa0f",
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "26537509",
+   "id": "d5a79246",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54938550",
+   "id": "cc7d174f",
    "metadata": {},
    "source": [
     "### Random Tensors\n",
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "7c396b42",
+   "id": "f8e2a286",
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "a1e196d4",
+   "id": "fa69fda1",
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "790156cd",
+   "id": "dcada816",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "588b806a",
+   "id": "30912976",
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d898a683",
+   "id": "9822e051",
    "metadata": {},
    "source": [
     "### Zeros and Ones"
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "9fae8a83",
+   "id": "a57567a7",
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "a51d4ac0",
+   "id": "9faf56c5",
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "1412f20c",
+   "id": "f431b936",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc4bf750",
+   "id": "22e10765",
    "metadata": {},
    "source": [
     "### Range of tensors and tensors-like"
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "4421c8c8",
+   "id": "8056fa1d",
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "c7595d41",
+   "id": "6afa455a",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3c97edc",
+   "id": "8d22d57f",
    "metadata": {},
    "source": [
     "### Tensor datatypes\n",
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "dab84619",
+   "id": "1f5e290d",
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "ddc46431",
+   "id": "31944b83",
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "a4f02ca9",
+   "id": "0392030c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "fdcb7c28",
+   "id": "a0d2a2c4",
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7565c0da",
+   "id": "98793eca",
    "metadata": {},
    "source": [
     "### Getting information from tensors"
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "60b7199c",
+   "id": "cd5ca11e",
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "14f2210b",
+   "id": "1ea939bf",
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c63e6b3e",
+   "id": "93c5b50c",
    "metadata": {},
    "source": [
     "### Manipulating tensors (tensor operations)\n",
@@ -777,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "3482c3c4",
+   "id": "52cd2e3b",
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +800,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "1f4f0b05",
+   "id": "c8dc6eff",
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +822,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "142a9243",
+   "id": "f5c819b2",
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "a6103192",
+   "id": "7e054799",
    "metadata": {},
    "outputs": [
     {
@@ -864,8 +864,146 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 80,
+   "id": "6b4d7e35",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(14)"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Matrix Multiplication\n",
+    "torch.matmul(tensor,tensor) #can use mm() instead of matmul() or use @ inbetween two tensors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "eeb86a9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "mat1 and mat2 shapes cannot be multiplied (3x2 and 3x2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[81], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmatmul\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrand\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrand\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: mat1 and mat2 shapes cannot be multiplied (3x2 and 3x2)"
+     ]
+    }
+   ],
+   "source": [
+    "torch.matmul(torch.rand(3,2),torch.rand(3,2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e9c4fa8",
+   "metadata": {},
+   "source": [
+    "This does not work as inner dimension does not match, while in the one below the inner dimension matches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "717f4632",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.1461, 0.0859, 0.2431],\n",
+       "        [0.0464, 0.0244, 0.0929],\n",
+       "        [0.4942, 0.2838, 0.8588]])"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.matmul(torch.rand(3,2),torch.rand(2,3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c8eaa03",
+   "metadata": {},
+   "source": [
+    "To fix our tensor shape issues, we can manipulate the shape of our tensors using a transpose.\n",
+    "\n",
+    "A **transpose** switches the axes or dimensions of a given vector\n",
+    "\n",
+    "We can transpose a tensor using the attribute **T**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "c311a481",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.6009, 0.3209, 0.5092],\n",
+       "        [0.6706, 0.1996, 0.2707],\n",
+       "        [0.9227, 0.5547, 0.8981]])"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.matmul(torch.rand(3,2),torch.rand(3,2).T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "e0e6e5ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor A shape: torch.Size([2, 3])\n",
+      "Tensor B shape: torch.Size([2, 3])\n",
+      "Multiplying Tensor A having shape torch.Size([2, 3]) with Tensor B.T having shape torch.Size([3, 2])\n",
+      "Output: tensor([[ 46.,  28.],\n",
+      "        [118.,  73.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "tensorA = torch.Tensor([[1,2,3],\n",
+    "                      [4,5,6]])\n",
+    "tensorB = torch.Tensor([[9,8,7],\n",
+    "                        [6,5,4]])\n",
+    "print(f\"Tensor A shape: {tensorA.shape}\\nTensor B shape: {tensorB.shape}\")\n",
+    "print(f\"Multiplying Tensor A having shape {tensorA.shape} with Tensor B.T having shape {tensorB.T.shape}\")\n",
+    "print(f\"Output: {tensorA@tensorB.T}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "3b2bdad5",
+   "id": "e064fbe8",
    "metadata": {},
    "outputs": [],
    "source": []
