--- a/00-fundamentals.ipynb
+++ b/00-fundamentals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3323128c",
+   "id": "26bfebf6",
    "metadata": {},
    "source": [
     "## 00. PyTorch Fundamentals"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7c892e20",
+   "id": "648d84ae",
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89ae62ef",
+   "id": "a3da3e1f",
    "metadata": {},
    "source": [
     "## Introduction to Tensors\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1f3b4657",
+   "id": "f28b6425",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "79532b6a",
+   "id": "bcbe22fa",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4e04cb6c",
+   "id": "bf2979ff",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4269f705",
+   "id": "5a706905",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "70d4ecca",
+   "id": "5d50cdbe",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ecf71383",
+   "id": "6c2966ca",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c3e25aa4",
+   "id": "bd8f4785",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "ebd7ba56",
+   "id": "990540d3",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f8986cd6",
+   "id": "97b530c1",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "790e6152",
+   "id": "cec5bb41",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "93382ddc",
+   "id": "98a476e9",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "915899fa",
+   "id": "538dc677",
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "313f245d",
+   "id": "33b8fd76",
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "d3b7fa0f",
+   "id": "5e9a0a45",
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "d5a79246",
+   "id": "76cf67b1",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc7d174f",
+   "id": "63bfceb5",
    "metadata": {},
    "source": [
     "### Random Tensors\n",
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "f8e2a286",
+   "id": "1fdfbb57",
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "fa69fda1",
+   "id": "a70a8f96",
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "dcada816",
+   "id": "389cc7ad",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "30912976",
+   "id": "e749a6b3",
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9822e051",
+   "id": "e1bc1949",
    "metadata": {},
    "source": [
     "### Zeros and Ones"
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "a57567a7",
+   "id": "90fdacfb",
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "9faf56c5",
+   "id": "b6b16d04",
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "f431b936",
+   "id": "47b348a7",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22e10765",
+   "id": "ce0af116",
    "metadata": {},
    "source": [
     "### Range of tensors and tensors-like"
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "8056fa1d",
+   "id": "3d7ad8e6",
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "6afa455a",
+   "id": "39ee79e9",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d22d57f",
+   "id": "139c0bcf",
    "metadata": {},
    "source": [
     "### Tensor datatypes\n",
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "1f5e290d",
+   "id": "09e43953",
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "31944b83",
+   "id": "df5b960f",
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "0392030c",
+   "id": "06ca441c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "a0d2a2c4",
+   "id": "c1fe887e",
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98793eca",
+   "id": "92ea150f",
    "metadata": {},
    "source": [
     "### Getting information from tensors"
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "cd5ca11e",
+   "id": "295e367d",
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "1ea939bf",
+   "id": "f1b43601",
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93c5b50c",
+   "id": "b64bf0dd",
    "metadata": {},
    "source": [
     "### Manipulating tensors (tensor operations)\n",
@@ -777,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "52cd2e3b",
+   "id": "037d3f57",
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +800,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "c8dc6eff",
+   "id": "502a0a51",
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +822,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "f5c819b2",
+   "id": "47d3b271",
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "7e054799",
+   "id": "20bb6bce",
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "6b4d7e35",
+   "id": "04a0dd2c",
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +887,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "eeb86a9e",
+   "id": "92f05115",
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e9c4fa8",
+   "id": "3dcce1c2",
    "metadata": {},
    "source": [
     "This does not work as inner dimension does not match, while in the one below the inner dimension matches"
@@ -917,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "717f4632",
+   "id": "0f26d82b",
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c8eaa03",
+   "id": "05507c6e",
    "metadata": {},
    "source": [
     "To fix our tensor shape issues, we can manipulate the shape of our tensors using a transpose.\n",
@@ -952,7 +952,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "c311a481",
+   "id": "e57d410e",
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "e0e6e5ef",
+   "id": "a36d3165",
    "metadata": {},
    "outputs": [
     {
@@ -1001,9 +1001,106 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1e52450e",
+   "metadata": {},
+   "source": [
+    "### Tensor Aggregation (Min, Max, Mean, Sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "ae1c5c01",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 0, 10, 20, 30, 40, 50, 60, 70, 80, 90])"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a tensor\n",
+    "x = torch.arange(0,100,10)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "985d0d64",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(0), tensor(0))"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find the min\n",
+    "torch.min(x), x.min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "46c3bf5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(90), tensor(90))"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find the max\n",
+    "torch.max(x), x.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "ebbb1c25",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(45., dtype=torch.float16), tensor(45., dtype=torch.float16))"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find the mean - torch.mean requires tensor type to be float or complex\n",
+    "torch.mean(x.type(torch.float16)), x.type(torch.float16).mean()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e064fbe8",
+   "id": "b2236c3f",
    "metadata": {},
    "outputs": [],
    "source": []
