--- a/00-fundamentals.ipynb
+++ b/00-fundamentals.ipynb
@@ -1406,7 +1406,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "46def830",
+   "id": "a07829a2",
    "metadata": {},
    "outputs": [
     {
@@ -1437,7 +1437,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "6156b1ba",
+   "id": "2468963d",
    "metadata": {},
    "outputs": [
     {
@@ -1458,9 +1458,218 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c2772926",
+   "metadata": {},
+   "source": [
+    "### Indexing(selecting data from tensors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "17a7f131",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[[1, 2, 3],\n",
+       "          [4, 5, 6],\n",
+       "          [7, 8, 9]]]),\n",
+       " torch.Size([1, 3, 3]))"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = torch.arange(1,10).reshape(1,3,3)\n",
+    "x, x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "830eebc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1, 2, 3],\n",
+       "        [4, 5, 6],\n",
+       "        [7, 8, 9]])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Indexing on this new tensor x\n",
+    "x[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "9ea7367f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([1, 2, 3]), tensor([1, 2, 3]))"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[0][0], x[0,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "39b9ab85",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(1), tensor(1))"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[0][0][0], x[0,0,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "fc7f11ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1, 2, 3]])"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# You can use \":\" to select all of a target dimension\n",
+    "x[:,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "c3292128",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[2, 5, 8]])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get all values of 0th and 1st dimension but only index 1 of 2nd dimension\n",
+    "x[:,:,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "276e99d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([5])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get all values of 0th but only the index 1 of 1st and 2nd dimension\n",
+    "x[:,1,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "841561e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1, 2, 3])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Getindex 0 of 0th and 1st dimension and all  values of 2nd dimension\n",
+    "x[0,0,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "dff4a0fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(9), tensor(9))"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Index on x to return 9\n",
+    "x[0][2][2], x[0,2,2]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "395b57a3",
+   "id": "e27c2cdd",
    "metadata": {},
    "outputs": [],
    "source": []
